--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,9 @@
-APP_NAME=BaiTap
-APP_URL=http://baitap.test/
+APP_NAME=Agile
+APP_URL=http://agile.test/
 
 DB_DRIVER=pdo_mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_NAME=phpoop-2
+DB_NAME=test
 DB_USERNAME=root
 DB_PASSWORD=
